--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "workbench.iconTheme": "vs-seti"
+    "workbench.iconTheme": "vs-seti",
+    "yaml.schemas": {
+        "https://json.schemastore.org/tmlanguage.json": "file:///d%3A/OMEGA-II/for-coders-readme"
+    }
 }
